# 3dw-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.orcaslicer  README.md  docker-compose.yml  go.mod  go.sum  render_stl.sh
cmd/service/: main.go
core/: README.md  pyproject.toml
core/slicing/: __init__.py
core/slicing/model_render/: __init__.py  auto_render.py
core/slicing/tests/: __init__.py  test_smoke.py
core/tests/: README.md
core/tests/unit/: test_job_payload_unit.py
docs/: n8n_integration_api.md  pipeline-legacy.md
infra/windmill/: Caddyfile  Dockerfile  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml
infra/windmill/bootstrap/test_assets/: sample_job_payload.json
internal/render/: render.go
mcp-server/: README.md  pyproject.toml
mcp-server/src/: server.py
mcp-server/tests/: test_smoke.py
skills/restate/: SKILL.md
windmill/f/pipeline/: auto_orient.py  callback_backend.py  classify_nsfw.py  extract_images.py  ingest_job.py  map_slicer_profile.py  send_to_3dque.py  slice_model.py
