[project]
name = "core"
version = "0.1.0"
description = "Core domain logic for WindPipe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blender>=1.4",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests", "slicing/tests"]
markers = [
    "unit: fast deterministic domain tests",
]
addopts = "--strict-markers"
